--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <annotations-api-version>6.0.53</annotations-api-version>
         <grpc-version>1.68.1</grpc-version>
         <junit-jupiter-version>5.11.1</junit-jupiter-version>
-        <log4j2-version>2.24.0</log4j2-version>
+        <log4j2-version>2.24.2</log4j2-version>
         <protobuf-version>4.28.3</protobuf-version>
         <slf4j-version>2.0.16</slf4j-version>
         <testcontainers-version>1.20.2</testcontainers-version>
@@ -110,7 +110,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
             <version>${log4j2-version}</version>
             <scope>test</scope>
         </dependency>
