--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.tadayosi.tensorflow</groupId>
+    <groupId>io.github.tadayosi.tensorflow</groupId>
     <artifactId>tensorflow-serving-client</artifactId>
     <version>0.2-SNAPSHOT</version>
 
