--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.tadayosi.tensorflow</groupId>
     <artifactId>tensorflow-serving-client</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.2.1</version>
 
     <name>TensorFlow Serving Client for Java</name>
     <description>A Java client library for TensorFlow Serving</description>
@@ -30,7 +30,7 @@
         <connection>scm:git:git@github.com:tadayosi/tensorflow-serving-client-java.git</connection>
         <developerConnection>scm:git:git@github.com:tadayosi/tensorflow-serving-client-java.git</developerConnection>
         <url>git@github.com:tadayosi/tensorflow-serving-client-java.git</url>
-        <tag>HEAD</tag>
+        <tag>v0.2.1</tag>
     </scm>
 
     <properties>
